[tool.poetry]
name = "nats-jwt"
version = "0.1.0"
description = "JWT tokens signed using NKeys for Ed25519 for the Python3 ecosystem"
authors = ["pomo <mark.barzali@firma.seznam.cz>"]
license = "Apache-2.0 license"
readme = "README.md"
packages = [{include = "jwt"}]

[tool.poetry.dependencies]
python = "^3.9"
nkeys = "^0.1.0"
pycryptodome = "^3.20.0"
pytz = "^2024.1"
dataclasses-json = "^0.6.4"
dacite = "^1.8.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
